--- a/.github/workflows/docx-to-md.yml
+++ b/.github/workflows/docx-to-md.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install pandoc
         run: |
@@ -24,6 +26,7 @@ jobs:
       - name: Convert .docx to Markdown (GFM)
         shell: bash
         run: |
+          set -euo pipefail
           mkdir -p docs
           shopt -s globstar nullglob
           converted=0
@@ -39,7 +42,9 @@ jobs:
           fi
 
       - name: Commit and push changes
+        shell: bash
         run: |
+          set -euo pipefail
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           if [ -n "$(git status --porcelain)" ]; then
@@ -48,3 +53,4 @@ jobs:
             git push
           else
             echo "No changes to commit."
+          fi
